--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
-<body>
+<body class="text-center">
+    <header>
+        <h1>Weather Dasboard</h1>
+    </header>
+    <div class="row d-flex justify-content-around">
+    <div class="mx-1 px-1 container col-3 d-flex-column justify-content-between">
+        <h2>Search for a City:</h2>
+        <input type="search" name="city" id="city" class="col-12">
+        <button class="searchBtn btn btn-primary col-12">Search</button>
+    </div>
+    <div class="mx-1 container col-8">
+        <h1>test</h1>
+    </div>
+    </div>  
     
 
 
