populated display with fetch requests

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <input type="search" name="city" id="city" class="col-12">
         <button class="searchBtn btn btn-primary col-12">Search</button>
     </div>
-    <div class="mx-1 container col-8">
-        <h1>test</h1>
+    <div class="mx-1 container col-8" id="displayArea">
+        
     </div>
     </div>  
     
