5 day forecast function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="text-center">
     <header>
-        <h1>Weather Dasboard</h1>
+        <h1>Weather Dashboard</h1>
     </header>
     <div class="row d-flex justify-content-around">
     <div class="mx-1 px-1 container col-3 d-flex-column justify-content-between">
