populated buttons, began writing function for saved searches

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>Weather Dashboard</h1>
     </header>
     <div class="row d-flex justify-content-around">
-    <div class="mx-1 px-1 container col-3 d-flex-column justify-content-between">
+    <div class="mx-1 px-1 container col-3 d-flex-column justify-content-between align-items-between" id="search-area">
         <h2>Search for a City:</h2>
-        <input type="search" name="city" id="city" class="col-12">
-        <button class="searchBtn btn btn-primary col-12">Search</button>
+        <input type="search" name="city" id="city" class="col-10">
+        <button class="searchBtn btn btn-primary col-10">Search</button>
     </div>
     <div class="mx-1 container col-8" id="displayArea">
         
