icons and uv style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
-<body class="text-center">
+<body class="text-left">
     <header>
         <h1>Weather Dashboard</h1>
     </header>
