buttons populating properly

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <h2>Search for a City:</h2>
         <input type="search" name="city" id="city" class="col-10">
         <button class="searchBtn btn btn-primary col-10">Search</button>
+        <div class="container border-top" id="button-area">
+            
+        </div>
     </div>
     <div class="mx-1 container col-8" id="displayArea">
         
